deployments/strimzi/kafka-bridge/kafka-bridge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edh
  namespace: ingestion
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-rpm: "300"
spec:
  tls:
    - hosts:
        - ingestion-dev.your-domain.com.br
      secretName: tls-secret
  rules:
  - host: ingestion-dev.your-domain.com.br
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: edh-bridge-service
            port:
              number: 8080
